# Mesh

./: .bazelrc  .clang-format  .dockerignore  .editorconfig  .gitattributes  .gitignore  .gitmodules  AUTHORS  CLAUDE.md  CMakeLists.txt  CODE_OF_CONDUCT.md  Dockerfile  Doxyfile  GNUmakefile  Makefile  README.md  WORKSPACE  abstract.tex  analysis.tex  bazel  compare.sh  config.mk  configure  file-backed-mmap.h  gen-size-classes  libmesh.cc  main.aux  main.bbl  main.blg  main.out  main.tex  mesh.bib  related.tex  run  stat.r  stats
.github/workflows/: main.yml
docker/dev/: Dockerfile
docker/spec-native-libc/: Linux-libc.cfg
impl/: bitmap.h  bitmap.hh  common.h  d_assert.cc  file-backed-mmapheap.cc  internal.h  libmesh.cc  meshing_benchmark.cc  meshingheap.h  meshingheap.hh  mmapheap.h  runtime.cc  runtime.h  segheap.h  strictsegheap.hh
impl/include/: bitmap.h  bitmap.hh  common.h  common.hh  file-backed-mmap.h  file-backed-mmapheap.h  file-backed-mmapheap.hh  internal.h  internal.hh  mesh-strictsegheap.h  meshing.h  meshing.hh  meshingheap.h  meshingheap.hh  miniheap.h  miniheap.hh  mmapheap.h  mmapheap.hh  runtime.hh
impl/include/rng/: mwc64.h
impl/include/static/: staticif.hh  staticlog.hh
impl/static/: staticif.h
impl/test/: fork-example.c  thread.cc
impl/unit/: bitmap.cc
orig_paper/: emery.tex
paper/: .gitignore  Makefile  abstract.tex  conclusion.tex  discussion.tex  emery.bib  evaluation.tex  introduction.tex  local-free.cc  local-malloc.cc  mesh.bib  mesh.tex  miniheap-free.cc  miniheap-malloc.cc  overview.tex  related-work.tex  related.tex  system.tex  theory.tex
related/: CMEnov2016.pptx
scripts/: install-hooks.sh  pre-commit
src/: BUILD  CMakeLists.txt  binned_tracker.h  binnedtracker.h  bitmap.h  cheap_heap.h  common.h  copts.bzl  d_assert.cc  debug_printf.h  dispatch_utils.h  fbsd_wrapper.cc  file-backed-mmapheap.cc  file-backed-mmapheap.h  fixed_array.h  fragmenter.c  fragmenter.cc  freelist.h  global_heap.cc  global_heap.h  global_heap_impl.h  globalmeshingheap.h  gnu_wrapper.cc  gnuwrapper.cpp  ifunc_resolver.h  internal.h  libmesh.cc  localmeshingheap.h  locked_heap.h  lockedheap.h  mac_wrapper.cc  measure_rss.c  measure_rss.cc  measure_rss.h  memory_stats.h  memory_stats_linux.cc  memory_stats_macos.cc  memory_stats_macos.h  memory_stats_windows.cc  mesh_trigger.h  (+36 more)
src/include/: bitmap.h  file-backed-mmap.h  internal.h  mesh-segheap.h  mesh-strictsegheap.h  meshing.h  meshingheap.h  miniheap.h
src/include/rng/: mwc-sse.h  mwc.h  mwc64.h  randomnumbergenerator.h  realrandomvalue.h
src/include/static/: staticif.h  staticlog.h
src/plasma/: mesh.h
src/platform/: exception_handler_windows.cc  exception_handler_windows.h  platform.h  vmem.h  vmem_windows.cc
src/rng/: mwc.h  mwc64.h  sx.hh  xor_shift_star.h  xoroshiro128plus.h  xorshiftstar.h
src/sanitizer/: sanitizer_common.cc  sanitizer_linux_x86_64.S  sanitizer_persistent_allocator.h  sanitizer_platform_limits_posix.cc  sanitizer_stubs.cc
src/static/: if.h  log.h  staticlog.h
src/test/: big-alloc.c  global-large-stress.cc  larson.cc  local-alloc.c  rng  thread.cc
src/testing/: fragmenter.cc  fragmenter_windows.cc  meshing_benchmark.cc  thread.cc  userfaultfd-kernel-copy.cc
src/testing/benchmark/: index_compute_benchmark.cc  larson.cc  local_refill.cc  malloc_benchmark.cc  malloc_free.cc
src/testing/unit/: alignment.cc  bitmap_test.cc  cacheline_padding_test.cc  concurrent_mesh_test.cc  fork_test.cc  macos_memory_test.cc  mesh_memory_test.cc  mesh_test.cc  mesh_trigger_test.cc  pending_list_test.cc  size_class_test.cc  thread_exit_test.cc  triple_mesh_test.cc
src/unit/: alignment.cc  binned_tracker_test.cc  binnedtracker.cc  bitmap.cc  bitmap_test.cc  concurrent_mesh_test.cc  cutoffs.cc  mesh.cc  mesh_test.cc  mprot_mesh.cc  rng.cc  size_class.cc  size_class_test.cc  triple_mesh.cc  triple_mesh_test.cc
support/: Doxyfile  __init__.py  config.py  config_template.h  export_mesh.cmake  gen-size-classes  install_all_configs  remove_export_mesh.cmake  update-bazelisk
test/: anon_test.cc  mozconfig-jemalloc  mozconfig-nojemalloc  ruby-bloat.rb
test/Speedometer/: index.html
test/atsy/: .gitignore  configure  run_speedometer  tp5n.manifest
test/docker/dev/: Dockerfile
test/docker/mstatgcc/: .gitignore  Makefile  mstatgcc.cc
test/docker/spec/: Dockerfile
test/docker/spec-diehard/: Dockerfile  Linux-diehard-mstat.cfg  Linux-diehard.cfg  build
test/docker/spec-glibc/: .gitignore  Dockerfile  Linux-glibc-mstat.cfg  Linux-glibc.cfg
test/docker/spec-hoard/: Dockerfile  Linux-hoard-mstat.cfg  Linux-hoard.cfg  build
test/docker/spec-jemalloc/: Dockerfile  Linux-jemalloc-mstat.cfg  Linux-jemalloc.cfg  build
test/docker/spec-mesh/: Dockerfile  Linux-mesh-mstat.cfg  Linux-mesh.cfg  build
test/docker/spec-mesh-0n/: Dockerfile  build
test/docker/spec-mesh-0y/: build
test/docker/spec-mesh-v2/: Dockerfile  build
test/docker/spec-native-libc/: Dockerfile  Linux-glibc-mstat.cfg  build
test/docker/spec-native-mesh/: Dockerfile
test/python/: .gitignore  big3.py  fragmentation.py  python_memleak.py  run.sh
test/ruby/: config.py  frag.rb  test  total
test/spec/: cmd.py  config.py  test
theory/: bound_comparison.py  choose.py  common.py  compute_exp_Y.py  createRandomString.py  deg_bound_check.py  degcheck.py  experiment.py  firefox_amazon.json  greedy_experiment.py  greedy_experiment_copy.py  greedy_experiment_q.py  makeGraph.py  match_vs_color_experiment.py  maxmatch_vs_E[Y].py  maxmatch_vs_greedymatch.py  mesh_util.py  meshers.py  meshingBenchmark.py  occupancyComparison.py  randmatch_vs_greedymatch.py  randmatch_vs_greedymatch_q.py  randmatch_vs_greedymatch_time.py  read_mesh_dump.py  test.py
theory/bounds/: impdeg+1
theory/dumps/: 10,3,10,random.txt  32,1,80,dumb.txt  32,2,80,dumb.txt  32,3,80,dumb.txt  32,4,80,dumb.txt  32,5,80,dumb.txt  32,6,80,dumb.txt  32,7,80,dumb.txt  32,8,80,dumb.txt  32,9,80,dumb.txt  provided,dumb.txt
